2004-09-11  Marcus Meissner  <marcus@jet.franken.de>

	* canon.[ch]: Added PowerShot A95 as reported.

2004-08-22  Marcus Meissner  <marcus@jet.franken.de>
	
	* canon.c,usb.c,library.c: Fixed various gp_log / GP_DEBUG problems.

2004-08-12  Hubert Figuiere  <hfiguiere@teaser.fr>

	* canon.[ch]: Added Powershot S60

2004-06-05  Hubert Figuiere  <hfiguiere@teaser.fr>

	* canon.[ch]: Added A310 as reported in patch 966814
	http://www.gphoto.org/patches/?id=966814

2004-06-01  Marcus Meissner  <marcus@jet.franken.de>

	* canon.[ch]: Added A75 as reported.

2004-05-30  Hubert Figuiere  <hfiguiere@teaser.fr>

	* canon.[ch]: Added PowerShot S410 / IXUS 430 by
	applying patch 963229
	http://www.gphoto.org/patches/?id=963229

2004-05-09  Marcus Meissner  <marcus@jet.franken.de>
	
	* canon.[ch]: Added IXUS 500 as reported.

2004-03-07  Marcus Meissner  <marcus@jet.franken.de>

	* canon.c: We check for consecutive 0s, so check for !*temp_ch.
	
2004-02-03  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* serial.c, usb.c: Use largest file size limit
	* canon.c, canon.h: Note improper use of file size limits
	
2004-01-31  Marcus Meissner <marcus@jet.franken.de>

	* canon.c, canon.h: Richard Simpson <richard@huskydog.org.uk>
	  Support for Canon MV650i.

2004-01-14  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* canon.c, canon.h: Add support for Canon ZR-70MC
	  Thanks for the report by Kevin R. Bulgrien.

2004-01-02  Marcus Meissner <marcus@jet.franken.de>

	* canon.c, usb.c: lock keys and audio support in PowerShot S50, from
	  rcaputo@users.sf.net

2003-11-08  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* canon.c, canon.h: Added support for Optura 20 (reported by Walt H)

2003-10-27  Marcus Meissner <meissner@suse.de>

	* canon.c: PowerShot S50 and A300 got lost somewhere.

2003-09-20  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* canon.c, canon.h, usb.c, usb.h: Added G5 support
	  (patches by Andreas Klemm <andreas@FreeBSD.org>)
