@@ -63,14 +63,15 @@ typedef enum {
 
 /**
  * canonCamModel
- * @CANON_PS_A95: PowerShot A95
  * @CANON_PS_A5: PowerShot A5
  * @CANON_PS_A5_ZOOM: PowerShot A5 Zoom
  * @CANON_PS_A50: PowerShot A50
  * @CANON_PS_A60: PowerShot A60
  * @CANON_PS_A70: PowerShot A70
  * @CANON_PS_A75: PowerShot A75
+ * @CANON_PS_A85: PowerShot A95
  * @CANON_PS_A80: PowerShot A80
+ * @CANON_PS_A95: PowerShot A95
  * @CANON_PS_PRO70: PowerShot Pro70
  * @CANON_PS_S10: PowerShot S10
  * @CANON_PS_S20: PowerShot S20
@@ -121,7 +122,6 @@ typedef enum {
  *
  */
 typedef enum {
-  	CANON_PS_A95,
 	CANON_PS_A5,
 	CANON_PS_A5_ZOOM,
 	CANON_PS_A50,
@@ -129,6 +129,8 @@ typedef enum {
 	CANON_PS_A70,
 	CANON_PS_A75,
 	CANON_PS_A80,
+	CANON_PS_A85,
+  	CANON_PS_A95,
 	CANON_PS_S10,
 	CANON_PS_S20,
 	CANON_PS_S30,
